---------------------------------------------------------------------------------------------------------
Genesis Plus GX 1.4.0 (??/??/????) (Eke-Eke)
---------------------------------------------------------------------------------------------------------

[Core]
------

* modified SN76489 cut-off frequency
* implemented optimized SN76489 core from Blargg that uses Blip Buffer linear synthesis (Noise Channel is now linear interpolated)
* added an option to boost SN76489 Noise Channel
* removed outdated Gens YM2612 core
* improved YM2612 core general accuracy (SSG-EG, CSM mode,...) (based upon Nemesis recent tests on real MD)
* improved YM2612 LFO emulation (fixes "Spider-Man & Venom : Separation Anxiety" intro music)
* fixed YM2612 context saving/loading.
* added 3-Band EQ for fully configurable sound filtering (credits to Neil C / Etanza Systems)
* implemented faster and better FIR resampler, removed libsamplerate support (thanks to Blargg and AamirM), Virtua Racing now plays fullspeed
when High Quality FM is enabled.
* improved VDP sprite masking emulation: fixes 3D level in Mickey Mania (thanks to Nemesis for his sprite test program)
* fixed lightgun autodetection: fixes cursor position in Lethal Enforcers II
* improved DIVU/DVIS (thanks to Jorge Cwik) & MULU/MULS 68k instructions timing accuracy 
* various code cleanup & core optimizations

[Gamecube/Wii]

* improved audio/video synchronization: fixes video skipping issues in 60Hz modes
* fixed stability issues and some (potential) memory leaks
* added internal screenshot feature
* improved lightgun cursors
* implemented new FONT & GUI engines: use internal IPL FONT, GX hardware & multithreading for fast rendering.
* implemented new interface: incl. IR pointing, ROM snapshots, menu effects, sound effects, BGM... (check the README for more details)



---------------------------------------------------------------------------------------------------------
Genesis Plus GX 1.3.1 (20/12/2008) (Eke-Eke)