@@ -6,7 +6,7 @@ Genesis Plus GX 1.4.0 (??/??/????) (Eke-Eke)
 ------
 
 * modified SN76489 cut-off frequency
-* implemented optimized SN76489 core from Blargg that uses Blip Buffer linear synthesis (Noise Channel is now linear interpolated)
+* implemented optimized SN76489 core which uses Blip Buffer linear synthesis (Noise Channel is now linear interpolated) (credits to Blargg)
 * added an option to boost SN76489 Noise Channel
 * removed outdated Gens YM2612 core
 * improved YM2612 core general accuracy (SSG-EG, CSM mode,...) (based upon Nemesis recent tests on real MD)
@@ -18,6 +18,7 @@ when High Quality FM is enabled.
 * improved VDP sprite masking emulation: fixes 3D level in Mickey Mania (thanks to Nemesis for his sprite test program)
 * fixed lightgun autodetection: fixes cursor position in Lethal Enforcers II
 * improved DIVU/DVIS (thanks to Jorge Cwik) & MULU/MULS 68k instructions timing accuracy 
+* added Game Genie hardware emulation (this means Game Genie ROM file is now fully supported, see README for more details)
 * various code cleanup & core optimizations
 
 [Gamecube/Wii]
